--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,5 @@
 {
-    "my_title":"Sofly (EN)",
+    "my_title":"Sofly",
     "songs_title":"{count, plural, =0{No songs found} =1{1 song} other{{count} songs found}}",
     "@songs_title":{
         "placeholders":{
@@ -24,5 +24,6 @@
     },
     "song_find":"Let's find song!",
     "input_search_text":"Part of the song...",
-    "find_button_text":"Find"
+    "find_button_text":"Find",
+    "waiting_text":"Please wait a moment"
 }
