give some words context added

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,5 +26,7 @@
     "input_search_text":"Part of the song...",
     "find_button_text":"Find",
     "waiting_text":"Please wait a moment",
-    "couldnt_find_lyrics":"couldn't find lyrics :/"
+    "couldnt_find_lyrics":"couldn't find lyrics :/",
+    "please_give_some_words":"Please give some words",
+    "warning":"Oops!"
 }
