--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -26,5 +26,7 @@
     "input_search_text":"Şarkının bir kısmı...",
     "find_button_text":"Bul",
     "waiting_text":"Lüften biraz bekleyin",
-    "couldnt_find_lyrics":"şarkı sözü bulunamadı :/"
+    "couldnt_find_lyrics":"şarkı sözü bulunamadı :/",
+    "please_give_some_words":"Lüften birkaç kelime yazın",
+    "warning":"Hımm!"
 }
